# opencontext

./: .gitignore  CLAUDE.md  LICENSE  README.md  api.py  app.py  cli.py  floom.json  opencontext.py  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  tsconfig.cli.json
cli/: index.ts
examples/: api-usage.ts  basic-usage.tsx
opencontext/: __init__.py  models.py  opencontext.py
opencontext/prompts/: opencontext.txt
shared/: __init__.py  constants.py  gemini_client.py  prompt_loader.py
src/app/: layout.tsx  page.tsx
src/app/api/: route.ts
src/app/api/analyze/: route.ts
src/app/api/health/: route.ts
src/components/: CompanySelector.tsx  ContextForm.tsx
src/hooks/: useContextStorage.ts
src/lib/: constants.ts  types.ts  utils.ts
